# disfluentES

./: .gitignore  LICENSE  README.md  disfluentes.py  disfluentes_cli.py  lard_sp_v1.py  lard_sp_v2.py  pyproject.toml  requirements.txt
config/: base_insertion.gin  base_pos.gin  base_precorrection.gin  base_probs.gin  base_repetition.gin  base_substitution.gin  base_words.gin  base_words_simple.gin  default.gin  global_pos_probs.gin  substitutions.gin  sustitutions.gin
config/levels/: 1año.gin  1año_simple.gin  3grado.gin  3grado_simple.gin  5grado.gin  5grado_simple.gin  7grado.gin  7grado_simple.gin  all.gin  global.gin  global_all.gin  global_no_ins.gin  global_no_ins_sub.gin  global_no_pre.gin  global_no_rep.gin  global_no_sub.gin  global_population_rep_pre_del.gin  global_population_rep_pre_del_ins_sub.gin  global_simple.gin  global_simple_all.gin  global_uniform_del.gin  global_uniform_pre.gin  global_uniform_rep.gin  global_uniform_rep_del.gin  global_uniform_rep_pre_del.gin  global_uniform_rep_pre_del_ins_sub.gin  primero.gin  quinto.gin  tercero.gin
disfluentes/: __init__.py  generator.py
disfluentes/operations/: noun_adj.py  phonological.py  text.py  (+3 more)
scripts/: sample_substitutions.py  spacy_to_mlconjug3.pkl  verbs_table.csv  verbs_table.py  verbs_table_real.csv  word_variations.py
src/: generator.py
tests/: __init__.py  test_cut.py  test_deletion.py  test_insertion.py  test_phonological.py  test_precorrection.py  test_repetition.py  test_substitution.py  test_verb_ops.py  test_verbs.py
texts/: 1_año.txt  3_grado.txt  5_grado.txt  7_grado.txt
(+21 files in other folders)
